--- a/scss/_pre_styles.scss
+++ b/scss/_pre_styles.scss
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-  background-color: rgb(228, 222, 222);
+  // background-color: rgb(228, 222, 222);
   width: 100%;
   height: 100vh;
   min-height: 100%;
@@ -33,6 +33,9 @@ footer {
   // margin-top: -60px;
 
   position:relative;
+  text-align: center;
+  font-size: 0.9rem;
+  align-items: center;
 
   height: 60px;
   width:100%;
